[tool.poetry]
name = "gamehub"
version = "0.1.0"
description = ""
authors = ["NeroBoyka <russelldosssouyovo@gmail.com>", "Tobi-De <tobidegnon@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynecone = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
